@@ -1,2 +1,2 @@
 #Sat Jul 30 03:35:57 MSD 2005
-version=0.7.1
+version=0.7.2
