@@ -1,3 +1,6 @@
+3-Jun-2006:
+   - Handling of namespaces fixed in the XMLComparator class. Thanks to Gunther Doernen.
+
 12-Sep-2005:
     - Juxy has been tested and is known to work with the latest releases of Xalan (2.7.0), Xerces (2.7.0) and Saxon (8.5.1).
 
